share return messages for funcs returning same type